# buibui

./: .gitignore  README.md  pyproject.toml
data/: 2122.json  2223.json  2324.json
notebooks/: data.ipynb  manual.ipynb  predictor.py
src/mpira/: buibui.py  explore_data.py  settings.py
tests/: test_scraper.py
