[project]
name = "mpira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.1",
    "flax>=0.9.0",
    "langchain-groq>=0.2.0",
    "scrapegraphai>=1.23.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
