[project]
name = "mpira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.1",
    "flax>=0.9.0",
    "langchain-groq>=0.2.0",
    "scrapegraphai>=1.23.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
mpira = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pymc = ">=5.16.2,<6"
ipykernel = ">=6.29.5,<7"
pip = ">=24.2,<25"
scikit-learn = ">=1.5.2,<2"
nbformat = ">=5.10.4,<6"
pyarrow = ">=17.0.0,<18"
arviz = ">=0.19.0,<0.20"
seaborn = ">=0.13.2,<0.14"
polars = ">=1.8.2,<2"
altair = ">=5.4.1,<6"
watermark = ">=2.5.0,<3"
ipywidgets = ">=8.1.5,<9"
